# DPGT

./: .gitignore  .gitmodules  Dockerfile  README.md  dependency.tree  pom.xml  pom.xml.back
src/main/java/org/bgi/flexlab/dpgt/: CombineGVCFsOnSites.java  CombineGVCFsOnSitesSparkFunc.java  CombineVCFHeader.java  CombineVCFHeadersSparkFunc.java  GVCFsSyncGenotyper.java  GVCFsSyncGenotyperSparkFunc.java  Main.java  MultiVariantSyncReader.java  VariantSiteFinder.java  VariantSiteFinderSparkFunc.java  VariantSiteSet.java
src/main/java/org/bgi/flexlab/dpgt/jointcalling/: CombineGVCFsOnSiteJob.java  CombineGVCFsOnSites.java  CombineGVCFsOnSitesSparkFunc.java  CombineVCFHeader.java  CombineVCFHeaderJob.java  CombineVCFHeadersSparkFunc.java  CombineVariantSiteSetSparkFunc.java  ConcatGenotypeGVCFsJob.java  ConcatGenotypeGVCFsSparkFunc.java  GVCFsSyncGenotyper.java  GVCFsSyncGenotyperJob.java  GVCFsSyncGenotyperSparkFunc.java  JointCallingSpark.java  JointCallingSparkConsts.java  JointCallingSparkOptions.java  MultiVariantSyncReader.java  NativeInitializer.java  VCFHeaderCombiner.java  VariantFinderJob.java  VariantSiteFinder.java  VariantSiteFinderSparkFunc.java  VariantSiteSet.java
src/main/java/org/bgi/flexlab/dpgt/utils/: DPGTJob.java  DPGTJobAsync.java  DPGTJobBase.java  DPGTJobState.java  NativeLibraryLoader.java  NativeResponse.java  SimpleIntervalUtils.java  VariantSiteSetUtils.java
src/main/java/org/bgi/flexlab/gaea/data/exception/: BAMQCException.java  BadCigarException.java  DynamicClassResolutionException.java  FileNotExistException.java  MalformedFile.java  MalformedReadException.java  MissingHeaderException.java  MissingReadGroupException.java  NullFilePathException.java  OptionsException.java  OutOfBoundException.java  UnsortedException.java  UserException.java
src/main/java/org/bgi/flexlab/gaea/data/options/: GaeaOptions.java  ToolsOptions.java
src/main/java/org/bgi/flexlab/gaea/tools/annotator/: AnnotationContext.java  AnnotationEngine.java  SampleAnnotationContext.java  VcfAnnoContext.java
src/main/java/org/bgi/flexlab/gaea/util/: AlignmentUtil.java  ArrayListLongWrap.java  ArrayUtils.java  BaseUtils.java  ChromosomeUtils.java  CigarState.java  DiploidGenotype.java  EventType.java  ExpandingArrayList.java  FileIterator.java  FilenameUtils.java  FisherTest.java  FragmentCollection.java  GaeaFilesReader.java  GaeaSamPairUtil.java  GaeaVCFConstants.java  GaeaVariantContextUtils.java  Histogram.java  IndelUtils.java  IndexRange.java  Lowess.java  MannWhitneyU.java  MathUtils.java  NestedHashMap.java  NestedObjectArray.java  OrderedProperties.java  Pair.java  PluginManager.java  PoxisFilesReader.java  QualityUtils.java  RandomUtils.java  ReadUtils.java  SAMUtils.java  SamRecordDatum.java  SamRecordUtils.java  SortUilts.java  StandardDataType.java  StatsUtils.java  StringUtils.java  SystemConfiguration.java  (+2 more)
src/main/java/org/broadinstitute/hellbender/engine/: FeatureInput.java  FeatureManager.java
src/main/java/org/broadinstitute/hellbender/tools/walkers/: GenotypeGVCFs.java  ReferenceConfidenceVariantContextMerger.java
src/main/java/org/broadinstitute/hellbender/utils/: MathUtils.java
src/main/java/org/broadinstitute/hellbender/utils/variant/: GATKVariantContextUtils.java
src/main/native/: CMakeLists.txt
src/main/native/common/: cached_ref_seq.cpp  cached_ref_seq.hpp  check_jemalloc.cpp  check_jemalloc.hpp  fastx_seq.cpp  fastx_seq.hpp  fastx_suffix.cpp  fastx_suffix.hpp  histogram.cpp  histogram.hpp  int_to_double_cache.cpp  int_to_double_cache.hpp  interval.hpp  jni_utils.cpp  jni_utils.hpp  log10_factorial_cache.hpp  math_utils.cpp  math_utils.hpp  overlap_detector.hpp  reference_context.cpp  reference_context.hpp  sequence_dictionary.cpp  sequence_dictionary.hpp  simple_interval.cpp  simple_interval.hpp  simple_matrix.hpp  timer.hpp  utils.cpp  utils.hpp
src/main/native/genotyper/: flat_genotype.cpp  flat_genotype.hpp  genotype.cpp  genotype.hpp  genotype_allele_counts.cpp  genotype_allele_counts.hpp  genotype_likelihood_calculator.cpp  genotype_likelihood_calculator.hpp  genotype_likelihood_calculators.cpp  genotype_likelihood_calculators.hpp  genotype_likelihoods.cpp  genotype_likelihoods.hpp
src/main/native/lix/: lix.c  lix.h  tbi2lix.c
src/main/native/test/: test_break_bands.cpp  test_combine_gvcfs_on_sites.cpp  test_find_variant_sites.cpp  test_genotype_allele_counts.cpp  test_genotype_count_tables.cpp  test_genotype_likelihood_calculator.cpp  test_get_fmt_kvs.cpp  test_get_vcf_formats.cpp  test_multi_vcf_group_on_start.cpp  test_multi_vcf_reader.cpp  test_vcf_attribute.cpp  test_vcf_header_combiner.cpp  test_vcf_header_mem.cpp  test_vcf_reader.cpp  test_vcf_writer.cpp
src/main/native/tools/: CombineGVCFsOnSites.cpp  CombineGVCFsOnSites.hpp  NativeInitializer.cpp  NativeInitializer.hpp  NativeResponse.cpp  NativeResponse.hpp  VCFHeaderCombiner.cpp  VCFHeaderCombiner.hpp  combine_gvcfs.cpp  combine_gvcfs.hpp  combine_gvcfs_on_sites.cpp  combine_gvcfs_on_sites.hpp  multi_variant_group_on_start.cpp  multi_variant_group_on_start.hpp  reference_confident_variant_merger.cpp  reference_confident_variant_merger.hpp  vcf_header_combiner.cpp  vcf_header_combiner.hpp
src/main/native/variant/: variant_site_set.hpp
src/main/native/variant_site_finder/: VariantSiteFinder.cpp  VariantSiteFinder.h  variant_site_finder.cpp  variant_site_finder.hpp
src/main/native/vcf/: allele.cpp  allele.hpp  gatk_vcf_constants.cpp  gatk_vcf_constants.hpp  hts_vcf_utils.cpp  hts_vcf_utils.hpp  multi_vcf_reader.cpp  multi_vcf_reader.hpp  nucleotide.hpp  variant_builder.cpp  variant_builder.hpp  variant_context.cpp  variant_context.hpp  variant_context_utils.cpp  variant_context_utils.hpp  vcf_attribute.cpp  vcf_attribute.hpp  vcf_constants.cpp  vcf_constants.hpp  vcf_header_fmt_id_table.cpp  vcf_header_fmt_id_table.hpp  vcf_ibuffer.cpp  vcf_ibuffer.hpp  vcf_id_table.cpp  vcf_id_table.hpp  vcf_reader.cpp  vcf_reader.hpp  vcf_shared_attribute.cpp  vcf_shared_attribute.hpp  vcf_writer.cpp  vcf_writer.hpp
src/main/resources/: AnnotatorConfig.json
(+920 files in other folders)
